--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,6 @@
             <a href="index.html" class="text-2xl font-bold text-primary">Teman<span class="text-yellow-600">Jalan</span></a>
             <div class="hidden md:flex space-x-6 font-medium">
                 <a href="layanan.html">Layanan</a>
-                <a href="jadwal.html">Jadwal</a>
                 <a href="faq.html" class="font-bold text-green-800 border-b-2 border-green-800">FAQ</a>
                 <a href="artikel.html">Artikel</a>
                 <a href="Gambar.html">Galery</a>
@@ -32,12 +31,12 @@
                         Berapa biaya jasa Tour Guide per hari?
                         <span class="group-open:rotate-180 transition-transform"><i class="fas fa-chevron-down"></i></span>
                     </summary>
-                    <p class="mt-4 text-gray-600">Biaya mulai dari Rp 250.000 untuk jasa pendampingan (Teman Jalan). Biaya ini belum termasuk akomodasi, tiket masuk wisata, dan transportasi jika Anda hanya memesan guide.</p>
+                    <p class="mt-4 text-gray-600">Biaya mulai dari Rp 50.000-Rp 150.000 untuk jasa pendampingan (Teman Jalan). Biaya ini Sudah termasuk bensin transportasi.</p>
                 </details>
                 
                 <details class="group border rounded-xl p-4 cursor-pointer">
                     <summary class="font-bold flex justify-between items-center list-none">
-                        Apakah itinerary bisa diubah mendadak?
+                        Apakah bisa diubah mendadak?
                         <span class="group-open:rotate-180 transition-transform"><i class="fas fa-chevron-down"></i></span>
                     </summary>
                     <p class="mt-4 text-gray-600">Tentu! Sebagai "Teman Jalan", kami sangat fleksibel. Jika cuaca tidak mendukung atau Anda merasa lelah, rute bisa kita diskusikan kembali saat perjalanan berlangsung.</p>
