--- a/layanan.html
+++ b/layanan.html
@@ -30,30 +30,32 @@
                 <p class="text-gray-600 mb-6">Layanan santai bagi Anda yang ingin teman mengobrol, navigasi jalan tikus Jogja, dan bantuan dokumentasi foto tanpa kesan kaku.</p>
                 <ul class="space-y-2 mb-6 text-sm">
                     <li><i class="fas fa-check text-green-500 mr-2"></i> Fleksibel tanpa batasan waktu kaku</li>
-                    <li><i class="fas fa-check text-green-500 mr-2"></i> Rekomendasi kuliner "Hidden Gems"</li>
                 </ul>
-                <a href="https://wa.me/62895333353386" class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">Pesan Layanan</a>
+                <a href="https://wa.me/62895333353386?text=Halo%20saya%20pesan%20paket%20Seharian." class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">Pesan Layanan</a>
             </div>
             
             <div class="bg-white p-8 rounded-2xl shadow-sm border hover:shadow-md transition">
                 <h3 class="text-2xl font-bold mb-4 text-green-800">2. Paket Setengah Hari</h3>
-                <p class="text-gray-600 mb-6">Paket lengkap termasuk mobil nyaman, bbm, driver, dan guide lokal yang informatif untuk rombongan keluarga.</p>
+                <p class="text-gray-600 mb-6">Buat kamu yang pengen keluar tapi males kalau sendirian, mau hunting foto atau sekadar keliling kota.
+
+                    "Punya wishlist tempat seru di Semarang tapi temen lagi pada sibuk semua? Jangan dipendem sendiri! Aku siap nemenin kamu strolling santai, nyobain kuliner yang lagi viral, atau sekadar jalan sore cari udara seger. Tenang aja, aku orangnya asik diajak jalan dan bisa bantu fotoin OOTD kamu biar makin cakep buat di-post. No more lonely walks, mari kita buat hari kamu lebih seru!"</p>
                 <ul class="space-y-2 mb-6 text-sm">
-                    <li><i class="fas fa-check text-green-500 mr-2"></i> Penjemputan Bandara/Stasiun</li>
+                    <li><i class="fas fa-check text-green-500 mr-2"></i> Antar jemput </li>
                     <li><i class="fas fa-check text-green-500 mr-2"></i> Durasi 12 Jam perjalanan</li>
                 </ul>
-                <a href="https://wa.me/62895333353386" class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">Pesan Layanan</a>
+                <a href="https://wa.me/62895333353386?text=Halo%20saya%20pesan%20paket%20Setengah%20Hari." class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">Pesan Layanan</a>
             </div>
 
             <div class="bg-white p-8 rounded-2xl shadow-sm border hover:shadow-md transition">
                 <h3 class="text-2xl font-bold mb-4 text-green-800">3. Paket Begadang</h3>
                 <p class="text-gray-600 mb-6">Paket lengkap termasuk mobil nyaman, bbm, driver, dan guide lokal yang informatif untuk rombongan keluarga.</p>
                 <ul class="space-y-2 mb-6 text-sm">
-                    <li><i class="fas fa-check text-green-500 mr-2"></i> Penjemputan Bandara/Stasiun</li>
-                    <li><i class="fas fa-check text-green-500 mr-2"></i> Durasi 12 Jam perjalanan</li>
+                    <li><i class="fas fa-check text-green-500 mr-2"></i> Antar jemput</li>
+                    <li><i class="fas fa-check text-green-500 mr-2"></i> Tengah Malam</li>
                 </ul>
-                <a href="https://wa.me/62895333353386" class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">Pesan Layanan</a>
-            </div>
+                <a href="https://wa.me/62895333353386?text=Halo%20saya%20pesan%20paket%20begadang." 
+                class="inline-block bg-green-800 text-white px-6 py-2 rounded-lg">
+                Pesan Layanan</a></div>
 
             
         </div>
