--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
             <a href="index.html" class="text-2xl font-bold text-primary">Teman<span class="text-yellow-600">Jalan</span></a>
             <div class="hidden md:flex space-x-6 font-medium">
                 <a href="layanan.html">Layanan</a>
-                <a href="jadwal.html">Jadwal</a>
                 <a href="faq.html">FAQ</a>
                 <a href="artikel.html">Artikel</a>
                 <a href="Gambar.html">Galery</a>
-                <a href="galeri.html">Gambar</a>
             </div>
-            <a href="https://wa.me/62895333353386" class="bg-primary text-white px-5 py-2 rounded-full text-sm">Chat Admin</a>
+            <a href="https://wa.me/62895333353386" class="bg-primary text-white px-5 py-2 rounded-full text-sm">Chat Asmara</a>
         </div>
     </nav>
 
@@ -43,24 +41,24 @@
 
     <section id="itinerary" class="py-20 bg-white">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl font-bold text-center mb-12">Rencana Perjalanan Populer</h2>
+            <h2 class="text-3xl font-bold text-center mb-12">Daftar Wisata Populer Yogyakarta</h2>
             <div class="grid md:grid-cols-2 gap-10">
                 <div class="itinerary-card p-6 border rounded-2xl hover:border-primary transition">
-                    <h3 class="text-2xl font-bold text-primary mb-4">Day 1: Classic Cultural Heritage</h3>
+                    <h3 class="text-2xl font-bold text-primary mb-4">Wisata populer dalam kota</h3>
                     <ul class="space-y-4">
-                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">08:00</span> Penjemputan di Hotel/Stasiun</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">09:00</span> Eksplorasi Keraton & Tamansari</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">12:00</span> Makan Siang Gudeg Autentik</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">15:00</span> Sunset di Candi Prambanan</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">1. </span> Kraton Yogyakarta</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">2. </span> Taman Sari</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">3. </span> Tugu Jogja</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">4. </span> Pantai Parangtritis</li>
                     </ul>
                 </div>
                 <div class="itinerary-card p-6 border rounded-2xl hover:border-primary transition">
-                    <h3 class="text-2xl font-bold text-primary mb-4">Day 2: Nature & Adventure</h3>
+                    <h3 class="text-2xl font-bold text-primary mb-4">Event Konser Jogja </h3>
                     <ul class="space-y-4">
-                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">04:00</span> Sunrise Punthuk Setumbu</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">07:00</span> Candi Borobudur Tour</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">13:00</span> Lava Tour Merapi (Jeep)</li>
-                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">18:00</span> Kembali ke Penginapan</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">1. </span> ORIGIN FEST -  7 Februari 2026 </li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">3. </span> Perantara Fest - 3 April 2026</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">4. </span> GEMBIRA FEST- 5 April 2026</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-blue-100 text-blue-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">2. </span> ESPeepz - 30 mei 2026 </li>
                     </ul>
                 </div>
             </div>
@@ -86,7 +84,7 @@
                         Berapa maksimal orang dalam satu rombongan?                        <span class="group-open:rotate-180 transition-transform"><i class="fas fa-chevron-down"></i></span>
                     </summary>
                     <p class="mt-4 text-gray-600">
-                        Kami melayani solo traveler hingga rombongan besar (bus). Namun spesialisasi kami adalah rombongan kecil (2-7 orang) agar lebih akrab.
+                        Saya melayani solo traveler.
                     </p>
                 </details>
             </div>
@@ -106,7 +104,7 @@
                 </div>
                 <div class="flex items-center">
                     <div class="w-12 h-12 bg-primary text-white rounded-full flex items-center justify-center mr-4"><i class="fas fa-envelope"></i></div>
-                    <span>asmarasumbawa@gmail.com</span>
+                    <span>erdinsumbawa7@gmail.com</span>
                 </div>
             </div>
             <form class="space-y-4">
