--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="flex flex-wrap justify-center gap-4">
 
                 <a href="layanan.html" class="bg-yellow-600 hover:bg-yellow-700 px-8 py-3 rounded-md font-bold transition">Layanan Kami</a>
-                <a href="layanan.html" class="bg-white text-gray-900 px-8 py-3 rounded-md font-bold transition">Tentang Kami</a>
+                <a href="tentangkami.html" class="bg-white text-gray-900 px-8 py-3 rounded-md font-bold transition">Tentang Kami</a>
 
             </div>
         </div>
@@ -44,12 +44,13 @@
             <h2 class="text-3xl font-bold text-center mb-12">Daftar Wisata Populer Yogyakarta</h2>
             <div class="grid md:grid-cols-2 gap-10">
                 <div class="itinerary-card p-6 border rounded-2xl hover:border-primary transition">
-                    <h3 class="text-2xl font-bold text-primary mb-4">Wisata populer dalam kota</h3>
+                    <h3 class="text-2xl font-bold text-primary mb-4">Wisata Populer Yogyakarta</h3>
                     <ul class="space-y-4">
                         <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">1. </span> Kraton Yogyakarta</li>
                         <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">2. </span> Taman Sari</li>
                         <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">3. </span> Tugu Jogja</li>
                         <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">4. </span> Pantai Parangtritis</li>
+                        <li class="flex items-center"><span class="w-8 h-8 bg-yellow-100 text-yellow-700 rounded-full flex items-center justify-center mr-3 text-xs font-bold">5. </span> Malioboro</li>
                     </ul>
                 </div>
                 <div class="itinerary-card p-6 border rounded-2xl hover:border-primary transition">
@@ -122,7 +123,7 @@
 
     <script src="script.js"></script>
    <center>
-    <h4>©2025 Temanjalan. Hak Cipta.</h4>
+    <h4>&copy;2025 Temanjalan. Hak Cipta.</h4>
    </center>
 </body>
 </html>
