--- a/tentangkami.html
+++ b/tentangkami.html
@@ -75,7 +75,7 @@
             width: 60%;
             height: 100%;
             background: linear-gradient(to right, var(--dark-bg), transparent),
-                        url(/galeri/gunung.jpg);
+                        url(https://images.pexels.com/photos/28916772/pexels-photo-28916772.jpeg?_gl=1*7e0bic*_ga*MTM2Nzk4NDAyOS4xNzQ2Mjg5NzU1*_ga_8JE65Q40S6*czE3Njc3NjIxMTgkbzckZzEkdDE3Njc3NjM1NDMkajU2JGwwJGgw);
             background-size: cover;
             background-position: center;
         }
@@ -206,7 +206,7 @@
         <div class="hero-image"></div>
         <div class="hero-content">
             <span class="sub-title">Teman Jalan</span>
-            <h1>Seni <br> Perjalanan <br> Tanpa Batas.</h1>
+            <h1>Perjalanan <br> Tanpa Batas.</h1>
             <p class="description">
                 Teman Jalan bukan sekadar wisata.
                 Dari sudut tersembunyi di gang-gang Malioboro hingga magisnya fajar di candi, 
